refac(doc): #3557.8 remove old files
Former-commit-id: d14a951528091db46c40aaae6a32117c49351184

--- a/old-content/asserts/index.adoc
+++ b/old-content/asserts/index.adoc
@@ -1,6 +1,6 @@
 :slug: products/asserts/
 :category: products
-:description: In this page we present the products offered by Fluid Attacks. Asserts is an engine to automate the closing of security findings over execution environments, which can be implemented in a CI pipeline to determine if a security issue persists in the application.
+:description: In this page we present the products offered by Fluid Attacks. Asserts is an engine to automate the closing of security findings over execution environments.
 :keywords: Fluid Attacks, Products, Asserts, Ethical Hacking, Pentesting, Security.
 :template: salesforce
 
@@ -166,160 +166,3 @@ fluidasserts-dynamic:
         fluid-docker.jfrog.io/"$FA_ORG":"$STAGE"
     - docker logout fluid-docker.jfrog.io
 ----
-
-. Now your pipeline will break if any vulnerability is found to be open,
-wether it is in the source code or in the production/staging environment.
-In order to not break the build,
-but still run the tests, set the `FA_STRICT` variable above to `false`.
-
-==== CI Stages
-
-OK, I’m in. But in what stage should I test my app with `Asserts` ?
-There are at least three good moments to perform closing testing:
-
-. After deploying to the production environment
-. After deploying to a staging or ephemeral environment
-. Even after every single commit!
-
-==== Post-production
-
-Just as before, we log in to the artifacts repository,
-pull the custom image and run it with `Docker`.
-This time, however, note that the job is run
-only in the `master` branch
-and in one of the latest stages, namely `post-deploy`.
-The source code of this branch
-is linked to to the container in the `/code` folder
-since it is already set up to test this particular folder.
-
-[source, bash, linenums]
-.post-deploy
-----
-fluidasserts-static:
-  stage: post-deploy
-  script:
-    - export STAGE="${FA_PROJECT}_static"
-    - docker login fluid-docker.jfrog.io
-        -u "$FA_BWAPP_USER"
-        -p "$FA_BWAPP_PASS"
-    - docker pull fluid-docker.jfrog.io/"$FA_ORG":"$STAGE"
-    - docker run
-        -e USER="$FA_BWAPP_USER"
-        -e PASS="$FA_BWAPP_PASS"
-        -e FA_STRICT=true
-        -v "$PWD":/code
-        fluid-docker.jfrog.io/"$FA_ORG":"$STAGE"
-    - docker logout fluid-docker.jfrog.io
-  only:
-    - master
-
-fluidasserts-dynamic:
-  stage: post-deploy
-    - export STAGE="${FA_PROJECT}_dynamic"
-    - docker login fluid-docker.jfrog.io
-        -u "$FA_BWAPP_USER"
-        -p "$FA_BWAPP_PASS"
-    - docker pull fluid-docker.jfrog.io/"$FA_ORG":"$STAGE"
-    - docker run
-        -e USER="$FA_BWAPP_USER"
-        -e PASS="$FA_BWAPP_PASS"
-        -e FA_STRICT=true
-        fluid-docker.jfrog.io/"$FA_ORG":"$STAGE"
-    - docker logout fluid-docker.jfrog.io
-  only:
-    - master
-----
-
-==== Post-ephemeral
-
-But wait! We could catch bugs before deploying to production.
-If you use ephemeral environments,
-you can also perform closings testing in those:
-
-[source, bash, linenums]
-----
-fluidasserts-static:
-  stage: test
-  script:
-    - export STAGE="${FA_PROJECT}_static"
-    - docker login fluid-docker.jfrog.io
-        -u "$FA_BWAPP_USER"
-        -p "$FA_BWAPP_PASS"
-    - docker pull fluid-docker.jfrog.io/"$FA_ORG":"$STAGE"
-    - docker run
-        -e USER="$FA_BWAPP_USER"
-        -e PASS="$FA_BWAPP_PASS"
-        -e FA_STRICT=true
-        -v "$PWD":/code
-        fluid-docker.jfrog.io/"$FA_ORG":"$STAGE"
-    - docker logout fluid-docker.jfrog.io
-  except:
-    - master
-
-fluidasserts-dynamic:
-  stage: test
-    - export STAGE="${FA_PROJECT}_dynamic"
-    - docker login fluid-docker.jfrog.io
-        -u "$FA_BWAPP_USER"
-        -p "$FA_BWAPP_PASS"
-    - docker pull fluid-docker.jfrog.io/"$FA_ORG":"$STAGE"
-    - docker run
-        -e USER="$FA_BWAPP_USER"
-        -e PASS="$FA_BWAPP_PASS"
-        -e FA_STRICT=true
-        fluid-docker.jfrog.io/"$FA_ORG":"$STAGE"
-    - docker logout fluid-docker.jfrog.io
-  except:
-    - master
-----
-
-In contrast to the post-deploy job above,
-this one runs on the development branches, during the `test` stage.
-Otherwise, everything else is the same,
-just like staging environments mirror production environments.
-
-==== Pre-commit
-
-As a developer you might be thinking
-“why wait until all other `CI` stages are finished
-if I just want to test whether my last commit fixed the security hole?”
-You could just run `Asserts` in your development machine,
-but sometimes tiny details (like dependencies versions)
-might cause the testing to pass in your machine
-but fail continuous integration.
-Remember that at this point during the development,
-there is no environment available for testing,
-hence you can only run static tests against the source code.
-
-In that case you might run the `Dockerized` incarnation of `Asserts`
-as a `pre-commit` hook:
-
-[source, bash, linenums]
-.pre-commit
-----
-- id: asserts-docker
-  name: Running Asserts on the code
-  description: Run Asserts to perform SAST
-  entry: -v /path/to/your/code/:/code fluidattacks/asserts:latest /code/asserts.sh
-  language: docker_image
-----
-
-This particular configuration is for the link:https://pre-commit.com/[`pre-commit`] tool,
-but can be adapted for similar tools like link:https://github.com/brigade/overcommit[`overcommit`].
-The use of such tools is convenient for the developer,
-as tests can be quickly run in their machine with every commit:
-
-image::pre-commit-ok.png[Pre-commit test passed]
-
-image::pre-commit-fail.png[Pre-commit test failed]
-
-The same tests can also be run in `CI` time
-(for example, in a `lint` stage) to ensure that nothing is broken,
-even if the developer forgot to run it. Just:
-
-[source, bash, linenums]
-----
-pre-commit run --all-files
-----
-
-somewhere in your `CI` script.
