--- a/content/pages/rules/social/261/index.adoc
+++ b/content/pages/rules/social/261/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/261/
 :category: social
 :description: This requirement establishes the importance of not exposing corporate information on publicly accessible web pages and application sections.
-:keywords: Corporate, Personal, Security, Sensitive, CWE, GDPR, OWASP, Rules, Ethical Hacking, Pentesting
+:keywords: Corporate, Personal, Security, Sensitive, ASVS, CWE, GDPR, OWASP, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R261. Avoid exposing sensitive information
@@ -36,19 +36,23 @@ from being accessed by actors who either are not explicitly authorized to
 access the information or do not have the implicit consent of the person about
 whom the information is collected.
 
-. [[r3]] link:https://eur-lex.europa.eu/legal-content/EN/TXT/PDF/?uri=CELEX:02002L0058-20091219[Directive 2002/58/EC (amended by E-privacy Directive 2009/136/EC).
+. [[r3]] link:https://cwe.mitre.org/data/definitions/548.html[CWE-548: Exposure of Information Through Directory Listing].
+A directory listing is inappropriately exposed,
+yielding potentially sensitive information to attackers.
+
+. [[r4]] link:https://eur-lex.europa.eu/legal-content/EN/TXT/PDF/?uri=CELEX:02002L0058-20091219[Directive 2002/58/EC (amended by E-privacy Directive 2009/136/EC).
 Art. 4: Security of processing.(1a)]
 The measures referred to in paragraph 1 shall at least ensure that personal
 data can be accessed only by authorized personnel for legally authorized
 purposes.
 
-. [[r4]] link:https://gdpr-info.eu/art-5-gdpr/[GDPR. Art. 5: Principles relating to processing of personal data.(1)(f).]
+. [[r5]] link:https://gdpr-info.eu/art-5-gdpr/[GDPR. Art. 5: Principles relating to processing of personal data.(1)(f).]
 Personal data shall be processed in a manner that ensures appropriate security
 of the personal data,
 including protection against unauthorized or unlawful processing and against
 accidental loss, destruction or damage.
 
-. [[r5]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A3-Sensitive_Data_Exposure[OWASP Top 10 A3:2017-Sensitive Data Exposure].
+. [[r6]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A3-Sensitive_Data_Exposure[OWASP Top 10 A3:2017-Sensitive Data Exposure].
 Many web applications and **API**s do not properly protect sensitive data,
 such as financial, healthcare, and *PII*.
 Attackers may steal or modify such weakly protected data to conduct credit card
@@ -56,3 +60,10 @@ fraud, identity theft, or other crimes.
 Sensitive data may be compromised without extra protection,
 such as encryption at rest or in transit, and requires special precautions when
 exchanged with the browser.
+
+. [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V4.3 Other Access Control Considerations.(4.3.2)]
+Verify that directory browsing is disabled unless deliberately desired.
+Additionally, applications should not allow discovery or disclosure of file or
+directory metadata,
+such as Thumbs.db, .DS_Store, .git or .svn folders.
