refac(cross): #3563 improve semrush score
- Fixed a broken link in Careers faq
- Minify plugins scripts


Former-commit-id: 9d5ddbf52c03395a83b11fc4827f7e57ed970bf0

--- a/content/pages/careers/faq/section2.adoc
+++ b/content/pages/careers/faq/section2.adoc
@@ -373,7 +373,7 @@ and fewer people in the higher salary range.
 
 ==== 30. What does Fluid Attacks expect from a new employee?
 
-At Fluid Attacks, we have three unchanging, non-negotiable link:../../values[values]:
+At Fluid Attacks, we have three unchanging, non-negotiable link:../../about-us/values[values]:
 
 *HONESTY:* We expect new employees to strictly abide by our ethics code,
 to follow our working philosophy,
