refac(doc): #3489.7 native english improvement
- Two changes suggested by Santaularia were implemented.


Former-commit-id: e1afa6c4f96e3a68eb84c8bb1a48e243e9c1cc0f

--- a/content/pages/faq/clients/index.adoc
+++ b/content/pages/faq/clients/index.adoc
@@ -134,7 +134,7 @@ Frequently asked questions about Continuous Hacking.
 *in order to provide a quotation?*::
 
   To provide a proposal, we need to determine
-  what will the target of evaluations (scope) be.
+  what the target of evaluation (scope) will be.
   So, we require the following information:
 
   . *One-shot hacking* (by project):
