--- a/content/pages/rules/authentication/226/index.adoc
+++ b/content/pages/rules/authentication/226/index.adoc
@@ -9,7 +9,7 @@
 == Requirement
 
 The system must never block a user account
-given one or several failed authentication attempts.
+after one or several failed authentication attempts.
 
 == Findings
 
@@ -17,20 +17,32 @@ given one or several failed authentication attempts.
 
 == References
 
-. [[r1]] link:https://cwe.mitre.org/data/definitions/645.html[CWE-645: Overly Restrictive Account Lockout Mechanism]
+. [[r1]] link:https://cwe.mitre.org/data/definitions/307.html[CWE-307: Improper Restriction of Excessive Authentication Attempts].
+The software does not implement sufficient measures to prevent multiple failed
+authentication attempts within in a short time frame,
+making it more susceptible to brute force attacks.
+
+. [[r2]] link:https://cwe.mitre.org/data/definitions/645.html[CWE-645: Overly Restrictive Account Lockout Mechanism].
 The software contains an account lockout protection mechanism,
 but the mechanism is too restrictive and can be triggered too easily,
 which allows attackers to deny service to legitimate users by causing their
 accounts to be locked out.
 
-. [[r2]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A2-Broken_Authentication[OWASP Top 10 A2:2017-Broken Authentication].
+. [[r3]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A2-Broken_Authentication[OWASP Top 10 A2:2017-Broken Authentication].
 Application functions related to authentication and session management are
 often implemented incorrectly,
 allowing attackers to compromise passwords, keys, or session tokens,
 or to exploit other implementation flaws to assume other users’ identities
 temporarily or permanently.
 
-. [[r3]] link:https://www.owasp.org/index.php/ASVS_V2_Authentication[OWASP-ASVS v3.1-2.20]
-Verify that anti-automation is in place
-to prevent breached credential testing, brute forcing,
-and account lockout attacks.
+. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V2.2 General Authenticator Requirements.(2.2.1)]
+Verify that anti-automation controls are effective at mitigating breached
+credential testing, brute force, and account lockout attacks.
+Such controls include blocking the most common breached passwords,
+soft lockouts, rate limiting, CAPTCHA, ever increasing delays between attempts,
+IP address restrictions,
+or risk-based restrictions such as location, first login on a device,
+recent attempts to unlock the account, or similar.
+Verify that no more than 100 failed attempts per hour is possible on a single
+account.
