--- a/content/pages/rules/credentials/131/index.adoc
+++ b/content/pages/rules/credentials/131/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/131/
 :category: credentials
 :description: This requirement establishes the importance of managing password change mechanisms to avoid multiple password changes in less than 24 hours.
-:keywords: Requirement, Security, Passwords, Changing, Attempts, Credentials, Rules, Ethical Hacking, Pentesting
+:keywords: Requirement, Security, Passwords, Changing, Attempts, Credentials, ASVS, CWE, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R131. Deny multiple password changing attempts
@@ -12,15 +12,32 @@ Passwords are not allowed to be changed more than once in the same day.
 
 == References
 
-. [[r1]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A2-Broken_Authentication[OWASP Top 10 A2:2017-Broken Authentication].
+. [[r1]] link:https://cwe.mitre.org/data/definitions/620.html[CWE-620: Unverified Password Change]
+When setting a new password for a user,
+the product does not require knowledge of the original password,
+or using another form of authentication.
+
+. [[r2]] link:https://cwe.mitre.org/data/definitions/640.html[CWE-640: Weak Password Recovery Mechanism for Forgotten Password]
+The software contains a mechanism for users to recover or change their
+passwords without knowing the original password,
+but the mechanism is weak.
+
+. [[r3]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A2-Broken_Authentication[OWASP Top 10 A2:2017-Broken Authentication].
 Application functions related to authentication and session management are
 often implemented incorrectly,
 allowing attackers to compromise passwords, keys, or session tokens,
 or to exploit other implementation flaws to assume other users’ identities
 temporarily or permanently.
 
-. [[r2]] link:https://www.owasp.org/index.php/ASVS_V2_Authentication[OWASP-ASVS v3.1-2.8]
-Verify all identity functions
-(e.g. forgot password, change password, change email, manage 2FA token, etc.)
-have the security controls,
-as the primary authentication mechanism (e.g. login form).
+. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V1.4 Access Control Architectural Requirements.(1.4.1)]
+Verify that trusted enforcement points such as at access control gateways,
+servers, and serverless functions enforce access controls.
+Never enforce access controls on the client.
+
+. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V2.5 Credential Recovery Requirements.(2.5.6)]
+Verify forgotten password, and other recovery paths use a secure recovery
+mechanism,
+such as *TOTP* or other soft token, mobile push, or another offline recovery
+mechanism.
