refac(doc): #2994.262 remove old asvs refs
- Removed old ASVS reference in R052, R002, R008, R234, R097,
R191, R240, R241, R242, R047 and R201
- Updated old ASVS references in R158


Former-commit-id: 1e3b537e809366ed9ed990c972ebbf9ec89c3a48

--- a/content/pages/rules/out-of-scope/architecture/052/index.adoc
+++ b/content/pages/rules/out-of-scope/architecture/052/index.adoc
@@ -9,13 +9,4 @@
 
 == Requirement
 
-All critical security components must be identified (+TCB+).
-
-== References
-
-. [[r1]] link:https://www.owasp.org/index.php/ASVS_V1_Architecture[+OWASP-ASVS v3.1-1.1+]
-All app components are identified and known to be needed.
-
-. [[r2]] link:https://www.owasp.org/index.php/ASVS_V1_Architecture[+OWASP-ASVS v3.1-1.4+]
-Data considered sensitive
-in the context of the application is clearly identified.
+All critical security components must be identified (*TCB*).
