--- a/django-apps/integrates-back-async/backend/reports/templates/pdf/tech.adoc
+++ b/django-apps/integrates-back-async/backend/reports/templates/pdf/tech.adoc
@@ -13,7 +13,7 @@
 
 
 This report was requested by {{user}} on {{date}} and it is only intended for their use.
-If you are reading this report and you are not {{user}}, you are not authorized to read nor keep this document. Please stop reading at the end of this paragraph, delete this document, and report the incident to {{user}}, the owner. To get an updated version of this report for yourself, please request a copy following this link [{{link}}[Fluid Integrates] > Reports > PDF].
+If you are reading this report and you are not {{user}}, you are not authorized to read nor keep this document. Please stop reading at the end of this paragraph, delete this document, and report the incident to {{user}}, the owner. To get an updated version of this report for yourself, please request a copy following this link [{{link}}[Fluid Integrates] > Reports > Executive].
 
 
 //Primera pagina - Contenido
