feat(doc): #2994.266 add asvs refs to some rules
- Added ASVS reference to R301, R347, R224 and R223
- Added CWE reference to R301
- Addded a Description to R301
- Adjusted R301 keywords


Former-commit-id: 87b293ed621e4271fc95f29699c892b86ea2b725

--- a/content/pages/rules/credentials/347/index.adoc
+++ b/content/pages/rules/credentials/347/index.adoc
@@ -50,10 +50,14 @@ Verify that no more than 100 failed attempts per hour is possible on a single
 account.
 
 . [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V2.6 Look-up Secret Verifier Requirements.(2.6.1)]
+Verify that lookup secrets can be used only once.
+
+. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V2.8 Single or Multi Factor One Time Verifier Requirements.(2.8.4)]
 Verify that time-based **OTP**s can be used only once within the validity
 period.
 
-. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V3.2 Session Binding Requirements.(3.2.1)]
 Verify the application generates a new session token on user authentication.
